# Godot-Tour

./: .gitignore  Global.gd  LICENSE  README.MD  Spatial.tscn  default_env.tres  godotour.MD  project.godot  pytour.md  rustour.md  shader.tres
L0 Basic Guide/: Circle.gd  entry.gd  entry.tscn  sayhello.gd
L01 Scene Tree/: Button.gd  Node.gd  cover.tscn  entry.tscn
L02 Viewport/: 2Din3D.tscn  L02 Viewport.tres  MeshRotation.gd  entry.tscn  skybox.gd  skybox.tscn  viewport.gd  viewport.tscn
L03 GDScript/: MyObject.gd  MySprite.gd  MyTitle.gd  entry.gd  entry.tscn
L04 Global Scope/: Camera.gd  entry.tscn  node_3d.tscn  viewport.gd
L05 Signlas Notifications/: Button.gd  entry.gd  entry.tscn
L06 InputMap/: RichTextLabel.gd  blend_tree.tres  entry.gd  entry.tscn  frog.gd  frog_animation.res  (+1 more)
mock-ray-trace/: Cargo.toml
mock-ray-trace/codegen/: Cargo.toml
mock-ray-trace/codegen/src/: lib.rs
mock-ray-trace/data/: point.json
mock-ray-trace/examples/: 01_helloworld.rs  01_lambda.rs  01_lifetime_annotation.rs  01_lifetime_bound.rs  01_lifetime_nll.rs  01_lifetime_scope.rs  01_lifetime_static.rs  01_unsafe.rs  02_error.rs  02_http.rs  02_http_no_err.rs  02_pin_heap.rs  02_pin_stack.rs  02_shadow_copy.rs  03_connect.rs  03_echo_server.rs  03_echo_udp.rs  03_serde.rs  04_async.rs  04_async_vs_threading.rs  04_blocking_vs_nonblocking.rs  04_sync_channel.rs  04_sync_mutex.rs  04_threading.rs  04_threading_builder.rs  04_threading_pool.rs  04_threading_server.rs  06_deref.rs  06_syscall.rs  09_executor.rs  09_green_thread.rs  index.html
mock-ray-trace/src/: main.rs
(+125 files in other folders)
