[package]
name = "mock-ray-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "./codegen"}
serde = { version = "1.0.151", features = ["derive", "serde_derive"] }
serde_json = "1.0.89"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
error-chain = "0.12.4"
async-std = "1.12.0"
bytes = "1.3.0"
rand = "0.8.5"
