[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.151", features = ["derive", "serde_derive"] }

